{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 53,
  "lineage": "6a4eea5f-85cd-6997-827a-3eb742b12ad1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "Project1_sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-086614eb9d784c08f",
            "description": "Allow HTTP access",
            "filter": null,
            "id": "sg-086614eb9d784c08f",
            "name": "main-sg-http",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "Project1_sg_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-0fb08a3d85b6653c3",
            "description": "Allow Jenkins access",
            "filter": null,
            "id": "sg-0fb08a3d85b6653c3",
            "name": "main-sg-jenkins",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "Project1_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-0e3fc21fe8685e066",
            "description": "Allow SSH access",
            "filter": null,
            "id": "sg-0e3fc21fe8685e066",
            "name": "main-sg-ssh",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:subnet/subnet-0cc37478f29c1fdbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 242,
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "state",
                "values": [
                  "available"
                ]
              }
            ],
            "id": "subnet-0cc37478f29c1fdbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559050225570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "main-public"
            },
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "Project1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:vpc/vpc-0b16e539a6d9d52b8",
            "cidr_block": "10.0.0.0/20",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a157c12540649b95",
                "cidr_block": "10.0.0.0/20",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0403323bdb2eb36fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b16e539a6d9d52b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d7e698c2f98c22a7",
            "owner_id": "559050225570",
            "tags": {
              "Name": "main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0026a04369a3093cc",
            "arn": "arn:aws:ec2:us-west-2:559050225570:instance/i-0c3691b2d793e7d05",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3691b2d793e7d05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "toche-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d15c16ec0368d09",
            "private_dns": "ip-10-0-12-248.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.248",
            "public_dns": "ec2-44-245-160-187.us-west-2.compute.amazonaws.com",
            "public_ip": "44.245.160.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c87d82ddafa77694",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc37478f29c1fdbe",
            "tags": {
              "Name": "socket_ansible"
            },
            "tags_all": {
              "Name": "socket_ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086614eb9d784c08f",
              "sg-0e3fc21fe8685e066"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu_ami",
            "data.aws_security_group.Project1_sg_http",
            "data.aws_security_group.Project1_sg_ssh",
            "data.aws_subnet.public_subnet",
            "data.aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04999cd8f2624f834",
            "arn": "arn:aws:ec2:us-west-2:559050225570:instance/i-0131ebc5f2dde07e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0131ebc5f2dde07e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "toche-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-012b7940fbbe763fb",
            "private_dns": "ip-10-0-12-226.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.226",
            "public_dns": "ec2-35-91-136-46.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.136.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08e8361a94fee4adf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc37478f29c1fdbe",
            "tags": {
              "Name": "socket_jenkins"
            },
            "tags_all": {
              "Name": "socket_jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086614eb9d784c08f",
              "sg-0e3fc21fe8685e066",
              "sg-0fb08a3d85b6653c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.linux_ami",
            "data.aws_security_group.Project1_sg_http",
            "data.aws_security_group.Project1_sg_jenkins",
            "data.aws_security_group.Project1_sg_ssh",
            "data.aws_subnet.public_subnet",
            "data.aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodejs_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0026a04369a3093cc",
            "arn": "arn:aws:ec2:us-west-2:559050225570:instance/i-0d7eb891b2c7ac014",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7eb891b2c7ac014",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "toche-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-099a39de983665e30",
            "private_dns": "ip-10-0-12-187.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.187",
            "public_dns": "ec2-44-248-248-80.us-west-2.compute.amazonaws.com",
            "public_ip": "44.248.248.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba785787d0b5c69f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc37478f29c1fdbe",
            "tags": {
              "Name": "socket_nodejs"
            },
            "tags_all": {
              "Name": "socket_nodejs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086614eb9d784c08f",
              "sg-096bb52afd6a7b839",
              "sg-0e3fc21fe8685e066"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.Project1_sg",
            "data.aws_ami.ubuntu_ami",
            "data.aws_security_group.Project1_sg_http",
            "data.aws_security_group.Project1_sg_ssh",
            "data.aws_subnet.public_subnet",
            "data.aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-096bb52afd6a7b839",
            "description": "allow https access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096bb52afd6a7b839",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "main-sg-https",
            "name_prefix": "",
            "owner_id": "559050225570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.Project1"
          ]
        }
      ]
    }
  ]
}